--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "price-poller",
-  "module": "src/index.ts",
+  "name": "backend",
+  "module": "index.ts",
   "type": "module",
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/express": "^5.0.3",
     "@types/pg": "^8.15.5"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "bullmq": "^5.58.2",
-    "ioredis": "^5.7.0",
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
     "pg": "^8.16.3"
   }
 }
