--- a/ws/package.json
+++ b/ws/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "price-poller",
-  "module": "src/index.ts",
+  "name": "ws",
+  "module": "index.ts",
   "type": "module",
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/pg": "^8.15.5"
+    "@types/ws": "^8.18.1"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "bullmq": "^5.58.2",
-    "pg": "^8.16.3",
-    "redis": "^5.8.2"
+    "redis": "^5.8.2",
+    "ws": "^8.18.3"
   }
 }
